<resources>
    <string name="app_name">Savetrek</string>
    <string name="title_activity_state">State</string>
    <string name="Enter">Enter</string>
    <string name="Redirect">Callback</string>
    <string name="State">Please Enter Your State</string>
    <string name="TimePrefs">BackupTime</string>
    <string name="Pause">Pause</string>
    <string name="Start">Start</string>
    <string name="Reset">Reset</string>
    <string name="TimeLeft">Remaining Time</string>
    <string name="IsRunning">Timer Is Running</string>
    <string name="EndTime">End Time</string>
    <string name="zeros">00:00:00</string>
    <string name="zeros2">00:00:00</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="submit">Submit</string>
    <string name="send_help">SEND HELP</string>
    <string name="restart">RESTART</string>
    <string name="cancel">CANCEL</string>
    <string name="timer_channel">Timer</string>
    <string name="timerChanDescription">Provides notifications about alarm</string>
    <string name="ALARM">Alarm</string>
    <string name="firstTime">First Time</string>
    <string name="authDate">AuthToken Maturity</string>
</resources>
