<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/zeros"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        tools:layout_editor_absoluteY="147dp" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:text="@string/Start"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="268dp" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/Reset"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="455dp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editText4"
        android:layout_marginStart="38dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/hours"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="372dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/minutes"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="399dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/seconds"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="476dp" />

    <Button
        android:id="@+id/submitTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="436dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true"
        android:layout_marginBottom="174dp"
        android:text=" Enter your desired time between check-ins \n Click SUBMIT then START to begin"
        android:textSize="19sp"
        tools:layout_editor_absoluteY="302dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="35dp" />


</android.widget.RelativeLayout>